syntax = 'proto3';
package gooseai;
option go_package = "github.com/stability-ai/api-interfaces/gooseai/transfer";


message TransferRequest {
    string user_id = 1; // user_id of the user who is requesting the transfer
    string fine_tuning_job_id = 2; // the id of the fine tuning job
    repeated string source_urls = 3; // a list of urls to the assets to be transferred
  }

message TransferResponse {
    repeated string urls = 3; // the list of transferred assets in their destination location
  }

 service TransferService {
    rpc Transfer(TransferRequest) returns (TransferResponse) {}
 } 